[package]
name = "wpdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
lol_html = "0.3.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
syntect = "5.0.0"
